--- a/src/index.html
+++ b/src/index.html
@@ -173,9 +173,9 @@
       </h3>
       <ol id="publications" class="no-list-style">
         <li class="reference">
-          <p class="title"><a href="https://doi.org/10.1093/bioinformatics/btx739" target="_blank">SATORI: A System for Ontology-Guided Visual Exploration of Biomedical Data Repositories</a></p>
+          <p class="title"><a href="https://doi.org/10.1093/bioinformatics/btx739" target="_blank">Pattern-Driven Navigation in 2D Multiscale Visual Spaces with Scalable Insets</a></p>
           <div class="secondary-information">
-            <ol class="no-list-style inline-list authors six-authors">
+            <ol class="no-list-style inline-list authors">
               <li>Fritz Lekschas</li>
               <li>Michael Behrisch</li>
               <li>Benjamin Bach</li>
@@ -183,8 +183,11 @@
               <li>Nils Gehlenborg</li>
               <li>Hanspeter Pfister</li>
             </ol>
-            <span class="journal">Bioinformatics</span>, Volume 34, Issue 7, 1 April 2018, Pages 1200–1207.
+            <span class="journal">bioRxiv</span>, 1 April 2018.
             <span class="doi"><abbr title="Digital Object Identifier">doi</abbr>: <a href="https://doi.org/10.1093/bioinformatics/btx739" target="_blank">10.1093/bioinformatics/btx739</a></span>
+            <ol class="no-list-style inline-list badges">
+              <li class="preprint">Preprint</li>
+            </ol>
           </div>
         </li>
       </ol>
