--- a/src/index.html
+++ b/src/index.html
@@ -21,13 +21,13 @@
     <link rel="stylesheet" href="index.css" type="text/css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-<ID>"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1367902-3"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-<ID>');
+      gtag('config', 'UA-1367902-3');
     </script>
 </head>
 
