--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Key words, key words, ...">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Template</title>
+    <title>Scalable Insets</title>
 
     <!-- http://www.jonathantneal.com/blog/understand-the-favicon/ -->
     <link rel="apple-touch-icon" href="assets/images/touchicon.png">
