--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
     <title>Scalable Insets</title>
 
     <!-- http://www.jonathantneal.com/blog/understand-the-favicon/ -->
-    <link rel="apple-touch-icon" href="assets/images/touchicon.png">
-    <link rel="icon" href="assets/images/favicon.png"">
-    <!--[if IE]><link rel="shortcut icon" href="assets/images/favicon.ico"><![endif]-->
+    <link rel="apple-touch-icon" href="images/touchicon.png">
+    <link rel="icon" href="images/favicon.png"">
+    <!--[if IE]><link rel="shortcut icon" href="images/favicon.ico"><![endif]-->
     <meta name="msapplication-TileColor" content="#FFFFFF">
-    <meta name="msapplication-TileImage" content="assets/images/tileicon.png">
+    <meta name="msapplication-TileImage" content="images/tileicon.png">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:400,400i,600" rel="stylesheet">
 
