Fix indentation. Add link to footer

--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,34 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="author" content="Fritz Lekschas">
-    <meta name="description" content="Description">
-    <meta name="keywords" content="Key words, key words, ...">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta name="author" content="Fritz Lekschas">
+  <meta name="description" content="A new technique for interactively exploring and navigating large numbers of annotated patterns in multiscale visual spaces such as gigapixel images, matrices, or maps.">
+  <meta name="keywords" content="Guided Navigation, Pattern Exploration, Multiscale Visual Spaces, Insets, Gigapixel Images, Maps, Genomics, Genome Interaction Matrices, Hi-C, 4D Nucleome, 4DN">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Scalable Insets</title>
+  <title>Scalable Insets</title>
 
-    <!-- http://www.jonathantneal.com/blog/understand-the-favicon/ -->
-    <link rel="apple-touch-icon" href="images/touchicon.png">
-    <link rel="icon" href="images/favicon.png"">
-    <!--[if IE]><link rel="shortcut icon" href="images/favicon.ico"><![endif]-->
-    <meta name="msapplication-TileColor" content="#FFFFFF">
-    <meta name="msapplication-TileImage" content="images/tileicon.png">
+  <!-- http://www.jonathantneal.com/blog/understand-the-favicon/ -->
+  <link rel="apple-touch-icon" href="images/touchicon.png">
+  <link rel="icon" href="images/favicon.png"">
+  <!--[if IE]><link rel="shortcut icon" href="images/favicon.ico"><![endif]-->
+  <meta name="msapplication-TileColor" content="#FFFFFF">
+  <meta name="msapplication-TileImage" content="images/tileicon.png">
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:400,400i,600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:400,400i,600" rel="stylesheet">
 
-    <link rel="stylesheet" href="index.css" type="text/css">
+  <link rel="stylesheet" href="index.css" type="text/css">
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1367902-3"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1367902-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-      gtag('config', 'UA-1367902-3');
-    </script>
+    gtag('config', 'UA-1367902-3');
+  </script>
 </head>
 
 <body>
@@ -117,7 +117,6 @@
         </svg>
         <span>Introduction</span>
       </h3>
-
       <section class="text">
         <div class="columns m-t-0-5 m-b-1">
           <p class="column-1-2">
@@ -518,6 +517,9 @@
         <p class="centered m-t-1 copyright">
         Copyright &copy; 2017 the President and Fellows of Harvard College. All content on this website is licensed under the <a href="http://creativecommons.org/licenses/by/4.0/legalcode" target="_blank">Creative Commons Attribution license (CC BY)</a>. Copyright of the linked papers is with the publishers.
         </p>
+      </div>
+      <div id="more-at-lekschas-de" class="flex-c flex-jc-c">
+        <a href="https://lekschas.de/research">More Projects by Fritz Lekschas</a>
       </div>
     </footer>
   </div>
