Make teaser figure not entirely full screen

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
       <h1>
         Pattern-Driven Navigation<br\>in 2D Multiscale Visual Spaces<br\>with <strong id="app-name"><div id="dot1"></div><div id="dot2"></div><div id="dot3"></div><div id="line1"></div><div id="line2"></div><div id="line3"></div><span id="app-name-text">Scalable Insets</span></strong>
       </h1>
-      <figure id="fig-teaser" class="fullscreen m-t-2 m-b-2"></figure>
+      <figure id="fig-teaser" class="large-screen m-t-2 m-b-2"></figure>
       <p class="abstract larger m-b-2">Scalable Insets is a new technique for interactively exploring and navigating large numbers of annotated patterns in multiscale visual spaces such as gigapixel images, matrices, or maps. Our technique visualizes annotated patterns too small to be identifiable at certain zoom levels using insets, i.e., magnified thumbnail views of the patterns. Insets are dynamically placed either within the viewport or along the boundary of the viewport to offer a compromise between locality and context preservation. Annotated patterns are interactively clustered by location and type. They are visually represented as an aggregated inset to provide scalable exploration within a single viewport.</p>
 
       <!--------------------------------- NEWS -------------------------------->
