Add links to plugin tracks

--- a/src/index.html
+++ b/src/index.html
@@ -255,7 +255,47 @@
               xmlns:xlink="http://www.w3.org/1999/xlink"
               xlink:href="images/icons.svg#github"></use>
           </svg>
+          <a href="https://github.com/flekschas/higlass-scalable-insets" target="_blank">https://github.com/flekschas/higlass-scalable-insets</a>
+        </li>
+        <li class="iconized">
+          <svg class="icon">
+            <use
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              xlink:href="images/icons.svg#github"></use>
+          </svg>
+          <a href="https://github.com/flekschas/higlass-image" target="_blank">https://github.com/flekschas/higlass-image</a>
+        </li>
+        <li class="iconized">
+          <svg class="icon">
+            <use
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              xlink:href="images/icons.svg#github"></use>
+          </svg>
+          <a href="https://github.com/flekschas/higlass-geojson" target="_blank">https://github.com/flekschas/higlass-geojson</a>
+        </li>
+        <li class="iconized">
+          <svg class="icon">
+            <use
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              xlink:href="images/icons.svg#github"></use>
+          </svg>
+          <a href="https://github.com/flekschas/higlass-labeled-annotation" target="_blank">https://github.com/flekschas/higlass-labeled-annotation</a>
+        </li>
+        <li class="iconized">
+          <svg class="icon">
+            <use
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              xlink:href="images/icons.svg#github"></use>
+          </svg>
           <a href="https://github.com/hms-dbmi/higlass-server" target="_blank">https://github.com/hms-dbmi/higlass-server</a>
+        </li>
+        <li class="iconized">
+          <svg class="icon">
+            <use
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              xlink:href="images/icons.svg#github"></use>
+          </svg>
+          <a href="https://github.com/flekschas/image-tiles-to-sqlite" target="_blank">https://github.com/flekschas/image-tiles-to-sqlite</a>
         </li>
       </ul>
 
