Update text and fix a typo

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         Pattern-Driven Navigation<br\>in 2D Multiscale Visual Spaces<br\>with <strong id="app-name"><div id="dot1"></div><div id="dot2"></div><div id="dot3"></div><div id="line1"></div><div id="line2"></div><div id="line3"></div><span id="app-name-text">Scalable Insets</span></strong>
       </h1>
       <figure id="fig-teaser" class="large-screen m-t-2 m-b-2"></figure>
-      <p class="abstract larger m-b-2">Scalable Insets is a new technique for interactively exploring and navigating large numbers of annotated patterns in multiscale visual spaces such as gigapixel images, matrices, or maps. Our technique visualizes annotated patterns too small to be identifiable at certain zoom levels using insets, i.e., magnified thumbnail views of the patterns. Insets are dynamically placed either within the viewport or along the boundary of the viewport to offer a compromise between locality and context preservation. Annotated patterns are interactively clustered by location and type. They are visually represented as an aggregated inset to provide scalable exploration within a single viewport.</p>
+      <p class="abstract larger m-b-2">Scalable Insets is a new technique for interactively exploring and navigating large numbers of annotated patterns or features in multiscale visualizations such as gigapixel images, matrices, or maps. A feature can by any kind of visual pattern such as car in an image, a dot in a matrix, or a park in a map. Our technique visualizes annotated patterns too small to be identifiable at certain zoom levels using insets, i.e., magnified thumbnail views of the patterns. Insets are dynamically placed either within the viewport or along the boundary of the viewport to offer a compromise between locality and context preservation. Annotated patterns are interactively clustered by location and type. They are visually represented as an aggregated inset to provide scalable exploration within a single viewport.</p>
 
       <!--------------------------------- NEWS -------------------------------->
 <!--       <h3 id="news" class="iconized underlined anchored">
@@ -124,7 +124,7 @@
           </p>
 
           <p class="column-1-2">
-            Exploring annotated patterns in context is often needed to assess the relevance of patterns and to dissect important from unimportant regions. For example, computational biologists study thousands of small patterns in large genome interaction matrices [<a href="#ref-1">1</a>] to understand which physical interactions between regions on the genome are the driving factor that defines the D structure of the genome. In astronomy, researchers are exploring and comparing multiple heterogeneous galaxies and stars within super high-resolution imagery [<a href="#ref-2">2</a>]. In either case, inspecting every potentially important region in detail is simply not feasible.
+            Exploring annotated patterns in context is often needed to assess the relevance of patterns and to dissect important from unimportant regions. For example, computational biologists study thousands of small patterns in large genome interaction matrices [<a href="#ref-1">1</a>] to understand which physical interactions between regions on the genome are the driving factor that defines the structure of the genome. In astronomy, researchers are exploring and comparing multiple heterogeneous galaxies and stars within super high-resolution imagery [<a href="#ref-2">2</a>]. In either case, inspecting every potentially important region in detail is simply not feasible.
           </p>
         </div>
 
