Add social media tags

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,30 @@
   <meta charset="utf-8">
   <meta name="author" content="Fritz Lekschas">
   <meta name="description" content="A new technique for interactively exploring and navigating large numbers of annotated patterns in multiscale visual spaces such as gigapixel images, matrices, or maps.">
-  <meta name="keywords" content="Guided Navigation, Pattern Exploration, Multiscale Visual Spaces, Insets, Gigapixel Images, Maps, Genomics, Genome Interaction Matrices, Hi-C, 4D Nucleome, 4DN">
+  <meta name="keywords" content="Guided Navigation, Pattern Exploration, Multiscale Visualizations, Insets, Gigapixel Images, Maps, Genomics, Genome Interaction Matrices, Hi-C, 3D Genome, 4D Nucleome, 4DN">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Schema.org markup for Google+ -->
+  <meta itemprop="name" content="Scalable Insets">
+  <meta itemprop="description" content="A new technique for interactively exploring and navigating large numbers of annotated patterns in multiscale visual spaces such as gigapixel images, matrices, or maps.">
+  <meta itemprop="image" content="http://scalable-insets.lekschas.de/images/teaser.jpg">
+
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@flekschas">
+  <meta name="twitter:title" content="Scalable Insets">
+  <meta name="twitter:description" content="A new technique for interactively exploring and navigating large numbers of annotated patterns in multiscale visual spaces such as gigapixel images, matrices, or maps.">
+  <meta name="twitter:creator" content="@flekschas">
+  <!-- Twitter summary card with large image must be at least 280x150px -->
+  <meta name="twitter:image:src" content="http://scalable-insets.lekschas.de/images/teaser.jpg">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Scalable Insets" />
+  <meta property="og:description" content="A new technique for interactively exploring and navigating large numbers of annotated patterns in multiscale visual spaces such as gigapixel images, matrices, or maps." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://hipiler.higlass.io" />
+  <meta property="og:image" content="http://scalable-insets.lekschas.de/images/teaser.jpg" />
+  <meta property="og:video" content="https://youtu.be/7Bn4mNLl3WQ" />
 
   <title>Scalable Insets</title>
 
