--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
   <meta property="og:title" content="Scalable Insets" />
   <meta property="og:description" content="A new technique for interactively exploring and navigating large numbers of annotated patterns in multiscale visual spaces such as gigapixel images, matrices, or maps." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://hipiler.higlass.io" />
+  <meta property="og:url" content="http://scalable-insets.lekschas.de" />
   <meta property="og:image" content="http://scalable-insets.lekschas.de/images/teaser.jpg" />
   <meta property="og:video" content="https://youtu.be/7Bn4mNLl3WQ" />
 
