--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
 
   <!-- http://www.jonathantneal.com/blog/understand-the-favicon/ -->
   <link rel="apple-touch-icon" href="images/touchicon.png">
-  <link rel="icon" href="images/favicon.png"">
+  <link rel="icon" href="images/favicon.png">
   <!--[if IE]><link rel="shortcut icon" href="images/favicon.ico"><![endif]-->
   <meta name="msapplication-TileColor" content="#FFFFFF">
   <meta name="msapplication-TileImage" content="images/tileicon.png">
@@ -58,7 +58,7 @@
     <div class="content p-t-2 p-b-2">
       <!-------------------------------- TEASER ------------------------------->
       <h1>
-        Pattern-Driven Navigation<br\>in 2D Multiscale Visual Spaces<br\>with <strong id="app-name"><div id="dot1"></div><div id="dot2"></div><div id="dot3"></div><div id="line1"></div><div id="line2"></div><div id="line3"></div><span id="app-name-text">Scalable Insets</span></strong>
+        Pattern-Driven Navigation<br\>in 2D Multiscale Visualizations<br\>with <strong id="app-name"><div id="dot1"></div><div id="dot2"></div><div id="dot3"></div><div id="line1"></div><div id="line2"></div><div id="line3"></div><span id="app-name-text">Scalable Insets</span></strong>
       </h1>
       <figure id="fig-teaser" class="large-screen m-t-2 m-b-2"></figure>
       <p class="abstract larger m-b-2">Scalable Insets is a new technique for interactively exploring and navigating large numbers of annotated patterns or features in multiscale visualizations such as gigapixel images, matrices, or maps. A feature can by any kind of visual pattern such as car in an image, a dot in a matrix, or a park in a map. Our technique visualizes annotated patterns too small to be identifiable at certain zoom levels using insets, i.e., magnified thumbnail views of the patterns. Insets are dynamically placed either within the viewport or along the boundary of the viewport to offer a compromise between locality and context preservation. Annotated patterns are interactively clustered by location and type. They are visually represented as an aggregated inset to provide scalable exploration within a single viewport.</p>
@@ -226,7 +226,7 @@
       </h3>
       <ol id="publications" class="no-list-style">
         <li class="reference">
-          <p class="title"><a href="https://www.biorxiv.org/content/10.1101/301036v2" target="_blank">Pattern-Driven Navigation in 2D Multiscale Visual Spaces with Scalable Insets</a></p>
+          <p class="title"><a href="https://www.biorxiv.org/content/10.1101/301036v2" target="_blank">Pattern-Driven Navigation in 2D Multiscale Visualizations with Scalable Insets</a></p>
           <div class="secondary-information">
             <ol class="no-list-style inline-list authors">
               <li>Fritz Lekschas</li>
@@ -269,7 +269,7 @@
               xmlns:xlink="http://www.w3.org/1999/xlink"
               xlink:href="images/icons.svg#github"></use>
           </svg>
-          <a href="https://github.com/hms-dbmi/higlass" target="_blank">https://github.com/hms-dbmi/higlass</a>
+          <a href="https://github.com/higlass/higlass" target="_blank">https://github.com/higlass/higlass</a>
         </li>
         <li class="iconized">
           <svg class="icon">
@@ -309,7 +309,7 @@
               xmlns:xlink="http://www.w3.org/1999/xlink"
               xlink:href="images/icons.svg#github"></use>
           </svg>
-          <a href="https://github.com/hms-dbmi/higlass-server" target="_blank">https://github.com/hms-dbmi/higlass-server</a>
+          <a href="https://github.com/higlass/higlass-server" target="_blank">https://github.com/higlass/higlass-server</a>
         </li>
         <li class="iconized">
           <svg class="icon">
