--- a/src/index.html
+++ b/src/index.html
@@ -63,45 +63,10 @@
       <figure id="fig-teaser" class="large-screen m-t-2 m-b-2"></figure>
       <p class="abstract larger m-b-2">Scalable Insets is a new technique for interactively exploring and navigating large numbers of annotated patterns or features in multiscale visualizations such as gigapixel images, matrices, or maps. A feature can by any kind of visual pattern such as car in an image, a dot in a matrix, or a park in a map. Our technique visualizes annotated patterns too small to be identifiable at certain zoom levels using insets, i.e., magnified thumbnail views of the patterns. Insets are dynamically placed either within the viewport or along the boundary of the viewport to offer a compromise between locality and context preservation. Annotated patterns are interactively clustered by location and type. They are visually represented as an aggregated inset to provide scalable exploration within a single viewport.</p>
 
-      <!--------------------------------- NEWS -------------------------------->
-<!--       <h3 id="news" class="iconized underlined anchored">
-        <a href="#news" class="hidden-anchor">
-          <svg class="icon">
-            <use
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              xlink:href="images/icons.svg#link"></use>
-          </svg>
-        </a>
-        <svg class="icon">
-          <use
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            xlink:href="images/icons.svg#new"></use>
-        </svg>
-        <span>News</span>
-      </h3>
-      <ol id="news" class="no-list-style large-spacing">
-        <li>
-          Submitted our paper to IEEE VIS InfoVis
-          <div class="date">
-            <svg class="icon icon-inline">
-              <use
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                xlink:href="images/icons.svg#calendar"></use>
-            </svg>
-            Mar 31, 2018
-            <svg class="icon icon-inline m-l-1-2">
-              <use
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                xlink:href="images/icons.svg#location"></use>
-            </svg>
-            IEEE VIS
-          </div>
-        </li>
-      </ol> -->
 
       <!------------------------------ SCREENCAST ----------------------------->
-      <h3 id="screencast" class="iconized underlined anchored">
-        <a href="#screencast" class="hidden-anchor">
+      <h3 id="screencast-presentation" class="iconized underlined anchored">
+        <a href="#screencast-presentation" class="hidden-anchor">
           <svg class="icon">
             <use
               xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -113,14 +78,25 @@
             xmlns:xlink="http://www.w3.org/1999/xlink"
             xlink:href="images/icons.svg#video"></use>
         </svg>
-        <span>Screencast</span>
+        <span>Screencast &amp; Presentation</span>
       </h3>
-      <div id="youtube" class="video">
-        <iframe
-          src="https://www.youtube.com/embed/7Bn4mNLl3WQ?rel=0&amp;showinfo=0"
-          frameborder="0"
-          allowfullscreen>
-        </iframe>
+      <div class="columns-2">
+        <div id="video" class="iframe-wrap">
+          <iframe
+            class="full-wh"
+            src="https://www.youtube.com/embed/7Bn4mNLl3WQ?rel=0&amp;showinfo=0"
+            frameborder="0"
+            allowfullscreen>
+          </iframe>
+        </div>
+        <div id="slides" class="iframe-wrap">
+          <iframe
+            class="full-wh"
+            src="//speakerdeck.com/player/267c2cbc1f0b451c977c6a03422a02e7"
+            frameborder="0"
+            scrolling="no">
+          </iframe>
+        </div>
       </div>
 
       <!-------------------------------- INTRO -------------------------------->
